# PAPER_ORC

./: .gitignore  GITHUB_UPLOAD_NOTES.md  HOW_TO_ADD_TO_README.md  README.md  README_ROADMAP_SECTION.md  pyproject.toml
ai_context/: current_status.md
docs/: bibliography_mapper.md  citation_extractor.md  citation_role_classifier.md  history_tree_builder.md  history_tree_preview.md  parser.md  real_paper_smoke_test.md  sample_paper_design.md
examples/: sample_bibliography_entries.json  sample_citation_mentions.json  sample_citation_to_bibliography_map.json  sample_expected_sections.json  sample_paper.txt  sample_parsed_paper.json
paper_repro/prompts/: 20_final_reproduction_validation_report.md  21_github_reproduction_package_cleanup.md  (+1 more)
prompts/: 00_bootstrap_repository.md  00z_archive_and_validate_claude_prompts.md  01_define_common_models.md  02_add_sample_paper_fixture.md  02b_complete_sample_fixture_docs_and_visual_outputs.md  02c_add_real_paper_smoke_fixture.md  03_build_paper_parser.md  03b_ieee_roman_heading_parser_patch.md  04_build_citation_extractor.md  05_build_bibliography_mapper.md  05b_raw_text_reference_fallback_patch.md  06_build_citation_role_classifier.md  06b_quick_history_tree_preview.md  06c_citation_role_classifier_precision_patch.md  10_build_history_tree_builder.md  PROMPT_INDEX.md
scripts/: analyze_one_paper.py
src/papernav.egg-info/: PKG-INFO  (+3 more)
tests/: test_bibliography_mapper.py  test_bootstrap.py  test_citation_extractor.py  test_citation_role_classifier.py  test_fixture.py  test_history_tree_builder.py  test_models.py  test_parser.py
(+92 files in other folders)
